--- a/styles/style.css
+++ b/styles/style.css
@@ -24,15 +24,17 @@ p { margin: auto;
     color: white;
     font-size: 20px;    
     letter-spacing: 1px;
-    }
+}
+
 img {
     width: 400px;
     max-width: 80%;
     display: block;
-    margin: 0 auto;
+    margin: 30px auto;
     border: 5px solid black;
     border-radius: 1em;
-    }
+}
+
 h1 {
     margin: 0; 
     color: white;
