--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 
 html {
-  font-family: 'Dosis', sans-serif; 
+  font-family: 'Ubuntu', sans-serif; 
   background-image: url("../images/b1.jpg");
   background-repeat: no-repeat;
   background-size: cover;
@@ -12,7 +12,7 @@ body {
   width: 80%;
   max-width: 800px;
   margin: 50px auto;
-  background-color: rgba(145, 122, 89, 0.65) ;
+  background-color: rgba(145, 122, 89, 0.65);
   padding: 10px;
   border: 5px solid black;
   border-radius: 1em;
