--- a/styles/style.css
+++ b/styles/style.css
@@ -12,7 +12,7 @@ body {
   width: 80%;
   max-width: 800px;
   margin: 50px auto;
-  background-color: rgba(145, 122, 89, 0.65);
+  background-color: rgba(145, 122, 89, 0.85);
   padding: 10px;
   border: 10px solid;
   text-align: center;
@@ -22,9 +22,14 @@ body {
   animation: 10s rotate linear infinite;
 }
 
-/* .bodySmall {
-  max-height: 150px;
-} */
+.body {
+  max-height: 120px;
+  transition: max-height 1s ease-out
+}
+.body.expanded {  
+  max-height: 10000px;
+  transition: max-height 1s ease-in
+}
 
 @keyframes rotate {
   to {
